Initial style updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,10 @@
 <footer class="center">
   <div class="measure">
     <small>
-      made with love by allyson kate using jekyll & pixyll • 2015
+      made with love by allyson kate using jekyll & pixyll • 2016
     </small>
+    {% if site.show_social_icons %}
+      {% include social_links.html %}
+    {% endif %}
   </div>
 </footer>
