--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,4 @@
 <a href="{{ site.baseurl }}/about/">About</a>
+<a href="{{ site.baseurl }}/words/">Words</a>
 <a href="{{ site.baseurl }}/work/">Work</a>
 <a href="{{ site.baseurl }}/contact/">Contact</a>
