--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,14 +50,22 @@ layout: default
   <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endif %}
 
-{% if site.show_related_posts %}
-  <h3 class="related-post-title">Related Posts</h3>
-  {% for post in site.related_posts %}
-    <div class="post ml2">
-      <a href="{{ post.url | prepend: site.baseurl }}" class="post-link">
-        <h4 class="post-title">{{ post.title }}</h4>
-        <p class="post-summary">{{ post.summary }}</p>
+
+
+<!-- <div class="pagination clearfix mb1 mt4">
+  <div class="left">
+        {% if page.next %}
+      <a rel="next" href="{{ site.baseurl }}{{ page.next.url }}">
+        <span class="pagination-item disabled">&rarr;</span> 
       </a>
-    </div>
-  {% endfor %}
-{% endif %}
+    {% endif %}
+  </div>
+  <div class="right">
+    {% if page.previous %}
+      <a rel="prev" href="{{ site.baseurl }}{{ page.previous.url }}">
+      <span class="pagination-item disabled"> &larr;</span>
+      </a>
+    {% endif %}
+  </div>
+</div> -->
+
