Debugged Hover & Footer

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@ layout: default
 
 
 
-<!-- <div class="pagination clearfix mb1 mt4">
+<div class="pagination clearfix mb1 mt4">
   <div class="left">
         {% if page.next %}
       <a rel="next" href="{{ site.baseurl }}{{ page.next.url }}">
@@ -67,5 +67,5 @@ layout: default
       </a>
     {% endif %}
   </div>
-</div> -->
+</div>
 
