--- a/_sass/_blockquotes.scss
+++ b/_sass/_blockquotes.scss
@@ -3,6 +3,7 @@ blockquote {
   font-style: italic;
   margin-left: $space-1;
   padding: $space-1;
+  margin-bottom: 1.25rem;
 }
 
 blockquote footer {
@@ -13,4 +14,5 @@ blockquote footer {
   font-style: normal;
   text-align: left;
   padding: 0;
+
 }
