--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,13 +13,13 @@ layout: default
   {% if page.update_date %}
     <span class="post-meta">Updated: {{ page.update_date | date: site.date_format }}</span><br>
   {% endif %}
-  <span class="post-meta small">
+  <!-- <span class="post-meta small">
   {% if page.minutes %}
     {{ page.minutes }} minute read
   {% else %}
     {{ minutes }} minute read
   {% endif %}
-  </span>
+  </span> -->
 </div>
 
 <article class="post-content">
@@ -56,7 +56,7 @@ layout: default
   <div class="left">
         {% if page.next %}
       <a rel="next" href="{{ site.baseurl }}{{ page.next.url }}">
-        <span class="pagination-item disabled">&rarr;</span> 
+        <span class="pagination-item disabled">&rarr;</span>
       </a>
     {% endif %}
   </div>
@@ -68,4 +68,3 @@ layout: default
     {% endif %}
   </div>
 </div>
-
