--- a/_sass/_positions.scss
+++ b/_sass/_positions.scss
@@ -1,7 +1,11 @@
 .left {
   float: left;
+  margin-bottom: 2em;
 }
 
 .right {
   float: right;
+  margin-bottom: 2em;
 }
+
+hr { margin-top: 0; margin-bottom: 1.5em }
