--- a/_sass/basscss/_base-typography.scss
+++ b/_sass/basscss/_base-typography.scss
@@ -6,7 +6,7 @@ body {
   font-size: 100%;
 }
 
-h1,
+
 h2,
 h3,
 h4,
@@ -18,6 +18,15 @@ h6 {
   margin-top: 0em;
   margin-bottom: .5em;
 }
+
+h1, {
+  font-family: $heading-font-family;
+  font-weight: $heading-font-weight;
+  line-height: $heading-line-height;
+  margin-top: 0em;
+  margin-bottom: .2em;
+}
+
 
 p,
 dl,
