--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,3 @@
 <a href="{{ site.baseurl }}/work/">Work</a>
-<a href="{{ site.baseurl }}/words/">Words</a>
+<a href="https://medium.com/@allysonkate">Words</a>
 <a href="{{ site.baseurl }}/contact/">Contact</a>
