--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,11 +10,11 @@ layout: default
 <div class="post-header mb2">
   <h1>{{ page.title }}</h1>
 
-  <span class="post-meta">{{ page.date | date: site.date_format }}</span>
+  <!-- <span class="post-meta">{{ page.date | date: site.date_format }}</span>
   {% if page.update_date %}
     <span class="post-meta">Updated: {{ page.update_date | date: site.date_format }}</span>
-  {% endif %}
-  <span class="post-meta"> | {{ page.summary }}</span><br>
+  {% endif %} -->
+  <span class="post-meta"> {{ page.summary }}</span><br>
 
 
   <!-- <span class="post-meta small">
