--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -32,7 +32,7 @@ $viewport-medium: 48em;
 $viewport-large: 64em;
 
 // Colors
-$blue: #0076df !default;
+$blue: #066CFF !default;
 $red: #f95020 !default;
 $green: #00cf26 !default;
 $yellow: #efcc00 !default;
@@ -54,7 +54,7 @@ $darken-4: rgba(#000,.5) !default;
 
 // Links
 $link-color: $purple;
-$link-hover-color: darken($blue, 40%);
+$link-hover-color: $blue;
 
 // Breakpoints
 $breakpoint-md: '(min-width: 52em)';
