--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -28,8 +28,8 @@
 .site-header nav a:active {
   color: #666;
   opacity: 1;
-  border-bottom: 2px solid #CC33FF;
-  box-shadow: inset 0 -10px 0 0 #CC33FF;
+  border-bottom: 2px solid $blue;
+  box-shadow: inset 0 -10px 0 0 $blue;
 
 
 }
