--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -29,7 +29,7 @@
       <a class="fa fa-dribbble" href="https://dribbble.com/{{ site.dribbble_username }}"></a>
     {% endif %}
     {% if site.medium_id %}
-      <a class="fa fa-medium" href="https://medium.com/{{ site.medium_id }}"></a>
+      <a class="fa fa-medium" href="https://medium.com/@{{ site.medium_id }}"></a>
     {% endif %}
   </div>
   <div class="right">
