--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -25,8 +25,8 @@
     {% if site.linkedin_username %}
       <a class="fa fa-linkedin" href="https://www.linkedin.com/in/{{ site.linkedin_username }}"></a>
     {% endif %}
-    {% if site.dribbble_username %}
-      <a class="fa fa-dribbble" href="https://dribbble.com/{{ site.dribbble_username }}"></a>
+    <!-- {% if site.dribbble_username %}
+      <a class="fa fa-dribbble" href="https://dribbble.com/{{ site.dribbble_username }}"></a> -->
     {% endif %}
     {% if site.medium_id %}
       <a class="fa fa-medium" href="https://medium.com/@{{ site.medium_id }}"></a>
