--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -2,6 +2,6 @@
   <hr />
   <img src="/images/FooterFace.png" alt="Allyson Wakeman" class="avatar" />
   <div class="footertext">
-  Allyson is a designer in Chicago with a deep love for community, podcasts, and gradients. Also <a href="https://twitter.com/allysonkate">Twitter</a>.
+  Allyson is a designer in Chicago with a deep love for community, podcasts, and glitch art. Also <a href="https://twitter.com/allysonkate">Twitter</a>.
 </div>
 </div>
