--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,6 +1,6 @@
 <div class="py2 post-footer">
   <hr />
-  <img src="/images/FooterFace.png" alt="Allyson Wakeman" class="avatar" />
+  <img src="/images/footerface22.png" alt="Allyson Wakeman" class="avatar" />
   <div class="footertext">
   Allyson is a designer in Chicago with a deep love for community, podcasts, and glitch art. Also <a href="https://twitter.com/allysonkate">Twitter</a>.
 </div>
